redbloom/static/style.css
@import url('https://fonts.googleapis.com/css2?family=Arapey&family=EB+Garamond:ital,wght@0,400;0,500;1,400;1,500&family=IM+Fell+French+Canon:ital@1&family=Montserrat:ital,wght@0,600;1,300&family=Space+Mono&family=Syncopate:wght@700&display=swap');

* {
  box-sizing: border-box;
}

html, body {
  margin: 0;
  padding: 0;
  font-family: 'EB Garamond', serif;

  background: #F5F5F5;
  color: #000;
}

body {
  margin: 0 auto;
  padding: 0.5em;
  max-width: 1000px;
  padding-top: 80px;
  font-size: 1.5em;
}
.content {
  margin: 0 auto;
  max-width: 680px;
}

a {
  font-family: 'EB Garamond', serif;
  text-transform: uppercase;
  color: #5d1a3b;
  letter-spacing: 1px;
  text-decoration: underline;
  font-weight: normal;
}
p a {
  font-size: 0.8em;
}

.brand {
  margin-right: 2em;
  padding-top: 0.5em;
  display: none;
}
.logo {
  width: 100px;
}

header {
  position: fixed;
  width: calc(100% - 1em);
  display: flex;
  top: 0;
  max-width: calc(1000px - 1em);
  font-size: 0.8em;
}
header h1 {
  display: none;
}
header a {
  font-family: 'Montserrat', sans-serif;
  color: #5d1a3b;
  text-decoration: none;
  letter-spacing: 0;
  font-size: 0.9em;
}
header a.active,
header a:hover {
  color: #d91213;
}
header nav {
  flex: 1;
}
header nav > ul {
  margin: 0;
  padding: 0.5em 0;
  list-style-type: none;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #F5F5F5;
}
header nav > ul > li:hover ul {
  display: block;
}
header nav > ul ul {
  list-style-type: none;
  padding: 0;
  position: absolute;
}
header nav .logo {
  width: 50px;
}
.menu-expand {
  width: 12px;
  height: 12px;
  vertical-align: baseline;
}

.red-bloom {
  color: #d91213;
  font-weight: bold;
  font-family: 'Montserrat', sans-serif;
  font-size: 0.85em;
}
header h1 {
  color: #d91213;
  font-weight: bold;
  font-family: 'Montserrat', sans-serif;
  text-transform: none;
  vertical-align: middle;
  margin: 0 0 0 0.5em;
  font-size: 1.4em;
}

.working-group img {
  width: 92px;
}
.working-group p {
  margin-top: 0.5em;
}
.working-group {
  margin-bottom: 2.5em;
}
.wg-link {
  text-decoration: none;
  text-transform: none;
  font-size: 1em;
}
.working-group-issue-logo {
  position: fixed;
  margin-left: -9.5em;
  bottom: 1em;
  width: 132px;
}
.menu--working-groups {
  background: #f5f5f5;
  padding: 0.5em;
}

.post-item {
  margin-bottom: 3em;
}
.post-item h2,
.post--header h2 {
  margin-bottom: 0;
  font-weight: normal;
}
.post-item h2 a {
  text-transform: none;
  text-decoration: none;
}
.post-item--meta {
  font-size: 0.8em;
}
figure {
  margin: 0;
}
figure img {
  max-width: 100%;
}

.content-calendar {
  max-width: 960px;
  margin-left: 9em;
}
.month {
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
}
.calendar--day {
  width: 14.28%;
  display: inline-block;
  vertical-align: top;
  min-height: 120px;
}
.calendar--day-label {
  font-family: 'Montserrat', sans-serif;
  font-weight: bold;
}
.calendar--event {
  line-height: 1;
  margin-bottom: 0.25em;
}
.calendar--event a {
  text-transform: none;
  text-decoration: none;
  letter-spacing: 0px;
}
.calendar--event-time {
  font-size: 0.8em;
}

/* For calculating path: http://complexdan.com/svg-circleellipse-to-path-converter/ */
.get-involved {
  position: fixed;
  bottom: 1em;
  right: 1em;
  z-index: 1;
}
.get-involved svg text a {
  fill: #d91213;
  text-transform: uppercase;
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  font-size: 0.7em;
  letter-spacing: 3px;
  text-decoration: none;
}
.get-involved svg {
  animation-name: rotate;
  animation-duration: 48s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}
@keyframes rotate {
  from { transform: rotate(0); }
  to { transform: rotate(360deg); }
}

.placeholder {
  text-align: center;
}

/* Mobile */
.menu--working-groups,
.menu-toggle {
  display: none;
}

@media only screen and (max-width: 820px) {
  .brand {
    display: block;
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-right: 0;
  }
  .logo {
    width: 48px;
    vertical-align: middle;
  }
  #menu--logo {
    display: none;
  }
  header {
    background: #F5F5F5;
    display: block;
  }
  header h1 {
    display: inline-block;
  }
  header nav {
    display: none;
  }
  header nav > ul {
    display: block;
    font-size: 1.4em;
    padding: 0;
  }
  header nav li {
    margin: 1em 0;
  }
  nav li > div {
    display: flex;
    justify-content: space-between;
    padding-right: 2em;
  }
  .menu--working-groups {
    display: block;
    list-style-type: none;
    font-weight: normal;
    position: relative;
    padding-left: 2em;
  }
  .menu--working-groups li:last-child {
    margin-bottom: 0;
  }
  header.open {
    max-height: 100vh;
    overflow-y: scroll;
    z-index: 2;
  }
  header.open nav {
    display: block;
  }
  .menu-toggle {
    display: block;
    cursor: pointer;
    width: 32px;
    height: 32px;
  }
  .menu-expand {
    width: 24px;
    height: 24px;
    vertical-align: sub;
  }
  .content-calendar {
    margin-left: 0;
  }
  .get-involved {
    display: none;
  }
}

